--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,13 @@ env:
     #
     # For this to work, you also need to set the  CACHIX_SIGNING_KEY
     # in your repository settings in Travis.
-    - CACHIX_CACHE=
+    # - CACHIX_CACHE=
     # Set this to notify the global nur package registry that changes are
     # available.
     #
     # The repo name as used in
     # https://github.com/nix-community/NUR/blob/master/repos.json
-    - NUR_REPO=<YOUR_NUR_REPO_NAME_HERE>
+    - NUR_REPO=nadrieril
 
 matrix:
   include:
@@ -38,8 +38,8 @@ install:
 script:
  - nix-build ci.nix -A buildOutputs
  - nix eval -f default.nix 'lib'
- - nix eval -f default.nix 'modules'
- - nix eval -f default.nix 'overlays'
+ # - nix eval -f default.nix 'modules'
+ # - nix eval -f default.nix 'overlays'
 
 after_success:
   - if [ -n "${CACHIX_CACHE}" ]; then nix-build ci.nix -A cacheOutputs | cachix push "${CACHIX_CACHE}"; fi
